<resources>
    <string name="app_name">Umaru</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_night">切换首页背景图</string>


    <string name="image_description">image</string>
    <string name="start">开始</string>
    <string name="welcome1">嗨，我是 Umaru!</string>
    <string name="welcome2">要来点可乐和薯条吗~</string>
    <string name="welcome3">今天的天气似乎不错</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="help_and_feedback">帮助</string>
    <string name="index">主页</string>
    <string name="music">音乐</string>
    <string name="umaru">Umaru</string>
    <string name="select_song">请先在音乐库选择歌曲</string>
    <string name="panel_song">歌曲详情</string>
    <string name="artist">艺术家</string>
    <string name="close">关闭</string>
    <string name="share">分享</string>
    <string name="agree">确定</string>
    <string name="net_error">远程服务器出现问题</string>
    <string name="share_via_umaru">\n\n分享自Umaru</string>
    <string name="artist_format_string" formatted="false"><![CDATA[%s?method=%s&lang=%s&artist=%s&format=json&api_key=%s]]></string>
    <string name="href"><![CDATA[<a href]]></string>
    <string name="equalizer">均衡器</string>
    <string name="share_song">分享歌曲</string>
    <string name="similar_singers">相似歌手</string>
    <string name="singer_similar_url">http://www.last.fm/zh/music/</string>
    <string name="online">在线</string>
    <string name="local_music">音乐库</string>
    <string name="chart">歌曲榜</string>
    <string name="chart_artists">艺人榜</string>
    <string name="fab_no_music">音乐库空空如也，去其他地方先下点音乐吧</string>
    <string name="request_permission">权限申请</string>
    <string name="permission_content">在设置-应用-Umaru-权限中开启权限，以正常使用Umaru，这些权限都是必要的。\n\n权限列表：\nREAD_EXTERNAL_STORAGE 权限用于读取本地音乐库\nRECORD_AUDIO 权限用于语音聊天\nCAMERA 权限用于扫描二维码</string>
    <string name="go_setting">去设置</string>
    <string name="cancel">取消</string>
    <string name="introduce">介绍</string>
    <string name="introduce_content">可爱的Umaru机器人，天气、听歌、问路，无论什么问题也难不倒她</string>
    <string name="developers">开发者</string>
    <string name="open_source">感谢以下开源项目</string>
    <string name="open_source_content">JakeWharton/butterknife\nTemplarian/materialiconlib\ngoogle/volley\ngoogle/gson\nbumptech/glide\ngreenrobot/EventBus\npengwei1024/logutils\nsquare/OkHttp\nsquare/Retrofit\nj256/ormlite-android\numano/AndroidSlidingUpPanel\nafollestad/material-dialogs\nlecho/hellocharts-android\nksoichiro/Android-ObservableScrollView\n讯飞/语音识别\nSkillCollege/ZBarScanProj\nzaaach/CityPicker</string>
    <string name="github">https://github.com/bigggge/Umaru</string>
    <string name="donate">donate</string>
    <string name="donate_id">UMARU</string>
    <string name="donate_done">支付宝账号已复制到剪贴板</string>
    <string name="color_primary">主色调</string>
    <string name="color_accent">强调色</string>
    <string name="colors">颜色</string>
    <string name="color_custom">自定义颜色</string>
    <string name="presets">预设颜色</string>
    <string name="back">后退</string>
    <string name="copy_link">复制链接</string>
    <string name="open_with">打开浏览器</string>
    <string name="refresh">刷新</string>
    <string name="tuling">图灵</string>
    <string name="animation">animation</string>
    <string name="snackbar_chat">点击上面的圆形按钮与我聊聊吧~</string>
    <string name="snackbar_error">网络连接异常</string>
    <string name="city">city</string>
    <string name="nowtxt">nowtxt</string>
    <string name="nowtmp">nowtmp</string>
    <string name="sug">sug</string>
    <string name="send">发送</string>
    <string name="seven_days">温度</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="after_tomorrow">后天</string>
    <string name="more">更多</string>
    <string name="know">知道了</string>
    <string name="tmp">温度</string>
    <string name="tmp_formatter">℃</string>
    <string name="go_chat">和我聊聊</string>
    <string name="ask_me">你可以这样问我</string>
    <string name="chat_guide_content">今天上海的天气怎么样\n\n明天从苏州到上海的火车\n\n播放一些歌曲\n\n拨打10001的电话\n\n扫一扫这个二维码\n\n最近流行的歌手</string>
    <string name="dont_show_again">不再显示</string>
    <string name="account_bind">账号绑定</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="account_error">请输入正确的学号</string>
    <string name="password_error">密码不能为空</string>
    <string name="account_hint">请输入学号</string>
    <string name="password_hint">请输入密码</string>
    <string name="account_not_bind">教务账号未绑定</string>
    <string name="now_bind_account">"当前绑定账号为: "</string>
    <string name="bind_success">绑定成功</string>
    <string name="wz_account">绑定文正教务账号，账号密码并不会上传，你无需担心账号安全</string>
    <string name="cookie">cookie</string>
    <string name="copy_done">复制成功</string>
    <string name="open_failed">打开失败</string>
    <string name="clean_web_cache">清除浏览器缓存</string>
    <string name="crash_uri">crash_uri</string>
    <string name="log">错误报告</string>
    <string name="send_log">发送错误报告</string>
    <string name="exit">退出</string>
    <string name="path">路径：</string>
    <string name="chat">聊天</string>
    <string name="denied_permission">"未被允许的权限: "</string>
    <string name="error">error</string>
    <string name="choose_city">选择城市</string>
    <string name="insert_city">insertToDB</string>
    <string name="s_choice">single_choice</string>
    <string name="version">"Version "</string>
    <string name="scan">扫一扫</string>
    <string name="bigggge">bigggge</string>
    <string name="capture_hint">将二维码放入框内，即可自动扫描</string>
    <string name="scan_result">扫描结果</string>
    <string name="goforward">前进</string>
    <string name="advanced">高级</string>
    <string name="thanks">感谢</string>
    <string name="thanks_api">接口</string>
    <string name="apis">图灵机器人\n和风天气\nLast.fm</string>
    <string name="day_night">切换主题</string>
    <string name="night_yes">night_yes</string>
    <string name="night_hint">夜间模式将在重启应用后生效</string>
    <string name="day_hint">日间模式将在重启应用后生效</string>
    <string name="heweather">heWeather</string>

    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="city_id">city_id</string>
    <string name="once">once</string>
    <string name="develop_by">Developed By Bigggge</string>
    <string name="blog">访问我的博客</string>
    <string name="restart">重启Umaru</string>
    <string name="test">测试工具</string>
    <string name="crash_test">意外终止测试</string>


    <string-array name="welcome_texts">
        <item>要来点可乐和薯条吗~</item>
        <item>嗨，我是 Umaru!</item>
        <item>和我聊聊吧</item>
        <item>今天的天气似乎不错</item>
    </string-array>

    <string-array name="settings_entry_values_cache">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="settings_entries_cache">
        <item>有网络时缓存超时60s</item>
        <item>有网络时缓存超时60s，无网络时缓存超时4周</item>
    </string-array>

    <string-array name="settings_entry_values_pic">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="settings_entries_pic">
        <item>低</item>
        <item>中</item>
        <item>高</item>
        <item>极高</item>
    </string-array>

    <string-array name="cities">
        <item>苏州</item>
        <item>丹阳</item>
    </string-array>

    <string-array name="testItems">
        <item>聊天</item>
        <item>选择城市</item>
        <item>音乐</item>
        <item>正在播放音乐</item>
        <item>WebView</item>
        <item>欢迎页</item>
        <item>意外终止</item>
        <item>二维码</item>
        <item>电话</item>
        <item>短信</item>
        <item>设置</item>
        <item>关于</item>
    </string-array>

</resources>
