<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_index"
            android:icon="@drawable/music_note"
            android:title="@string/index" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/music_note"
            android:title="@string/music" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item

            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item

            android:id="@+id/nav_about"
            android:icon="@drawable/information"
            android:title="@string/about" />
        <!--<item-->

            <!--android:id="@+id/nav_help"-->
            <!--android:icon="@drawable/help_circle"-->
            <!--android:title="@string/help_and_feedback" />-->
    </group>

</menu>
