<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="centerCrop"
                android:src="@drawable/example" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_above="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:background="@color/true_white"
                android:orientation="vertical"
                android:padding="@dimen/cardMarginHorizontal">

                <TextView
                    android:id="@+id/crash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/introduce"
                    android:textColor="@color/md_grey_600" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_about"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/introduce_content"
                        android:textColor="@color/md_grey_800"
                        android:textIsSelectable="true"
                        android:textSize="14sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/md_grey_500" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/developers"
                    android:textColor="@color/md_grey_600" />

                <RelativeLayout
                    android:id="@+id/developer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_about">

                    <cc.haoduoyu.umaru.widgets.CircleImageView
                        android:id="@+id/avatar_r"
                        android:layout_width="@dimen/avatar_size"
                        android:layout_height="@dimen/avatar_size"
                        android:layout_margin="16dp"
                        android:src="@drawable/avatar_weibo" />

                    <TextView
                        android:id="@+id/ggg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/avatar_r"
                        android:layout_toEndOf="@id/avatar_r"
                        android:layout_toRightOf="@id/avatar_r"
                        android:text="_GGG"
                        android:textColor="@color/md_grey_800"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ggg"
                        android:layout_toEndOf="@id/avatar_r"
                        android:layout_toRightOf="@id/avatar_r"
                        android:text="android developer"
                        android:textColor="@color/md_grey_600" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/md_grey_500" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/thanks_api"
                    android:textColor="@color/md_grey_600" />

                <RelativeLayout
                    android:id="@+id/thanks_api"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_about"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apis"
                        android:textColor="#545454"
                        android:textSize="@dimen/textSizeX2" />


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/md_grey_500" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/open_source"
                    android:textColor="@color/md_grey_600" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_about"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_source_content"
                        android:textColor="#545454"
                        android:textSize="@dimen/textSizeX2" />

                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

</FrameLayout>


